# rscripts-cli

./: .gitignore  README.md  pyproject.toml
rscripts_cli/: __init__.py  api.py  cli.py  mcp_server.py
