[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rscripts-cli"
version = "0.1.0"
description = "Browse rscripts.net from the terminal"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
    "mcp>=1.0",
]

[project.scripts]
rs = "rscripts_cli.cli:main"
rs-mcp = "rscripts_cli.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["rscripts_cli"]
